fix border on mobile

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -20,6 +20,7 @@ a {
 h1 {
   font-family: 'Opposit';
   font-weight: normal;
+  text-align: center;
 }
 
 title {
